fix: testing adding up a tag version

--- a/.github/workflows/3_create_release.yml
+++ b/.github/workflows/3_create_release.yml
@@ -42,6 +42,7 @@ jobs:
               break
             fi
           done
+          echo "::set-output name=pr_count::count"
 
       - name: Set PR Count as Output
         id: set_pr_count
